# atomic-dag-soc

./: .gitignore  CLAUDE.md  LICENSE  README.md  TECHNICAL_DEBT.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AUDITORIA_TESTES_EMPHIRICA_20260601.md  DOC-SELF-001-atomic-dag-self.md  PLANO_AJUSTES_CI_PYTEST_20260601.md  PLANO_CONTINUIDADE_FRACTAL_v1.md  PLANO_CONTINUIDADE_FRACTAL_v2.md  PLANO_ENGENHARIA_SOFTWARE_V1.md  PRE_EXECUCAO_PLANO_CONTINUIDADE_v2.md  STATUS.md  WAL_HUMANO.md  WAL_HUMANO_SPRINT3.md  WAL_HUMANO_SPRINT4.md  dashboard.html  index.html
docs/api/: llm-bridge.md  streaming.md  transitions.md
docs/architecture/adrs/: ADR-001-dual-layer-llm-python.md  ADR-002-python-3-11-plus.md  ADR-003-sprint1-lessons.md  ADR-004-atomic-writes.md  ADR-005-zenodo-timing-strategy.md  ADR-006-sprint-2-refactor-transitions.md  ADR-007-sprint-3-fm10-streaming.md  ADR-008-publication-ordering-rule.md  ADR-009-llm-bridge-minimal-scope.md
examples/hello-soc/: README.md  run_hello_soc.py
examples/hello-soc/atoms/: 01-introduction.md  02-method.md  03-conclusion.md
examples/hello-soc/recorded/: responses.json
knowledge/: CONTEXT_ENGINEERING_MODULE-v8.0.md  DTP-VECTOR.md  FRAMEWORK_FRACTAL_ANALYSIS_MERGED.md  FUNDAMENTACAO_MATEMATICA_INTEGRADA_V1.md  HOLISTIC_ITERATIVE_QUALITY_MODULE_v1.0.md  LLM_PVM_FRAMEWORK_V1.md  MANUSCRITO_ATOMIC_DAG_RSL_V2_CORRIGIDO.md  PESQUISA_VALIDACAO_METODO_2026_V1.md  PHILOSOPHICAL-ENGINE-v3.0.md  STRATEGIC-ACTION-ENGINE-v4.0.md  WINDOW_PROTOCOL_SPEC_V1.md  decision-topology-protocol.md  eval_trigger_metrics.py  opt_loop.py  run_gate.py  score_description.py  skill_gate.py
scripts/: build_dashboard.py  run-tests.sh  verify_setup.py
src/atomic_dag/: __init__.py  cli.py  dag.py  fsm.py  gate.py  llm_bridge.py  parser.py  streaming.py  transitions.py  wal.py  writer.py
tests/: test_build_dashboard.py  test_cli.py  test_dag.py  test_fm10_regression.py  test_fsm.py  test_gate.py  test_hello_soc.py  test_llm_bridge.py  test_parser.py  test_streaming.py  test_streaming_concurrency.py  test_streaming_performance.py  test_streaming_sigkill.py  test_transitions.py  test_transitions_concurrency.py  test_transitions_performance.py  test_transitions_sigkill.py  test_wal.py  test_writer.py
