[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "atomic-dag-soc"
version = "0.1.0"
description = "Document-in-DAG-Flow: BPMN-inspired modular orchestration for LLM-produced artifacts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "atomic-dag contributors" }
]
keywords = ["llm", "orchestration", "bpmn", "dag", "documentation-as-code", "soc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation",
]

# Dependências funcionais core - mínimas
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "click>=8.1",
    "attrs>=23.0",
]

[project.optional-dependencies]
# Extras para integração LLM (Sprint 4+)
llm = [
    "anthropic>=0.25",
]
# Dev tooling (lint, test, type-check)
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml",
    "types-jsonschema",
    "build>=1.2",
    "twine>=5.0",
]

[project.scripts]
# Este é o comando que ficará disponível no PATH após pip install
atomic-dag = "atomic_dag.cli:main"

[project.urls]
Documentation = "https://github.com/OWNER/atomic-dag-soc#readme"
Source = "https://github.com/OWNER/atomic-dag-soc"
Issues = "https://github.com/OWNER/atomic-dag-soc/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/atomic_dag"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --cov=atomic_dag --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["atomic_dag"]
# Sprint 0 exclui módulos que são stubs (NotImplementedError).
# Cada sprint subsequente remove entradas desta lista conforme implementa.
omit = [
    "src/atomic_dag/cli.py",      # Sprint 1: implementa comandos reais
    "src/atomic_dag/dag.py",      # Sprint 1: compute_dag_levels
    "src/atomic_dag/gate.py",     # Sprint 1: validate_gate
    "src/atomic_dag/parser.py",   # Sprint 1: parse_atom
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Conjunto pragmático: erros de sintaxe, imports, estilo, bugs comuns, modernização
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Em testes podemos ser menos exigentes com algumas verificações
"tests/*" = ["B011"]  # assert False is idiomatic in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
